feat: change favorite endpoints to use slug
