# pkg/api/user.pb.go
@@ -1,6 +1,6 @@
 // Code generated by protoc-gen-go. DO NOT EDIT.
 // versions:
-// 	protoc-gen-go v1.25.0-devel
+// 	protoc-gen-go v1.26.0
 // 	protoc        v3.13.0
 // source: user.proto
 
@@ -269,7 +269,7 @@ type AddRemoveMovieFavoriteRequest struct {
 	sizeCache     protoimpl.SizeCache
 	unknownFields protoimpl.UnknownFields
 
-	MovieId string `protobuf:"bytes,1,opt,name=movieId,proto3" json:"movieId,omitempty"`
+	Slug string `protobuf:"bytes,1,opt,name=slug,proto3" json:"slug,omitempty"`
 }
 
 func (x *AddRemoveMovieFavoriteRequest) Reset() {
@@ -304,9 +304,9 @@ func (*AddRemoveMovieFavoriteRequest) Descriptor() ([]byte, []int) {
 	return file_user_proto_rawDescGZIP(), []int{5}
 }
 
-func (x *AddRemoveMovieFavoriteRequest) GetMovieId() string {
+func (x *AddRemoveMovieFavoriteRequest) GetSlug() string {
 	if x != nil {
-		return x.MovieId
+		return x.Slug
 	}
 	return ""
 }
@@ -379,57 +379,58 @@ var file_user_proto_rawDesc = []byte{
 	0x07, 0x65, 0x6e, 0x74, 0x72, 0x69, 0x65, 0x73, 0x18, 0x01, 0x20, 0x03, 0x28, 0x0b, 0x32, 0x23,
 	0x2e, 0x63, 0x6f, 0x6d, 0x2e, 0x61, 0x76, 0x69, 0x65, 0x62, 0x72, 0x61, 0x6e, 0x74, 0x7a, 0x2e,
 	0x74, 0x76, 0x74, 0x69, 0x6d, 0x65, 0x2e, 0x43, 0x61, 0x74, 0x61, 0x6c, 0x6f, 0x67, 0x45, 0x6e,
-	0x74, 0x72, 0x79, 0x52, 0x07, 0x65, 0x6e, 0x74, 0x72, 0x69, 0x65, 0x73, 0x22, 0x39, 0x0a, 0x1d,
+	0x74, 0x72, 0x79, 0x52, 0x07, 0x65, 0x6e, 0x74, 0x72, 0x69, 0x65, 0x73, 0x22, 0x33, 0x0a, 0x1d,
 	0x41, 0x64, 0x64, 0x52, 0x65, 0x6d, 0x6f, 0x76, 0x65, 0x4d, 0x6f, 0x76, 0x69, 0x65, 0x46, 0x61,
-	0x76, 0x6f, 0x72, 0x69, 0x74, 0x65, 0x52, 0x65, 0x71, 0x75, 0x65, 0x73, 0x74, 0x12, 0x18, 0x0a,
-	0x07, 0x6d, 0x6f, 0x76, 0x69, 0x65, 0x49, 0x64, 0x18, 0x01, 0x20, 0x01, 0x28, 0x09, 0x52, 0x07,
-	0x6d, 0x6f, 0x76, 0x69, 0x65, 0x49, 0x64, 0x22, 0x20, 0x0a, 0x1e, 0x41, 0x64, 0x64, 0x52, 0x65,
-	0x6d, 0x6f, 0x76, 0x65, 0x4d, 0x6f, 0x76, 0x69, 0x65, 0x46, 0x61, 0x76, 0x6f, 0x72, 0x69, 0x74,
-	0x65, 0x52, 0x65, 0x73, 0x70, 0x6f, 0x6e, 0x73, 0x65, 0x32, 0xaf, 0x05, 0x0a, 0x0b, 0x55, 0x73,
-	0x65, 0x72, 0x53, 0x65, 0x72, 0x76, 0x69, 0x63, 0x65, 0x12, 0x7d, 0x0a, 0x0c, 0x52, 0x65, 0x67,
-	0x69, 0x73, 0x74, 0x65, 0x72, 0x55, 0x73, 0x65, 0x72, 0x12, 0x2a, 0x2e, 0x63, 0x6f, 0x6d, 0x2e,
-	0x61, 0x76, 0x69, 0x65, 0x62, 0x72, 0x61, 0x6e, 0x74, 0x7a, 0x2e, 0x74, 0x76, 0x74, 0x69, 0x6d,
-	0x65, 0x2e, 0x52, 0x65, 0x67, 0x69, 0x73, 0x74, 0x65, 0x72, 0x55, 0x73, 0x65, 0x72, 0x52, 0x65,
-	0x71, 0x75, 0x65, 0x73, 0x74, 0x1a, 0x2b, 0x2e, 0x63, 0x6f, 0x6d, 0x2e, 0x61, 0x76, 0x69, 0x65,
-	0x62, 0x72, 0x61, 0x6e, 0x74, 0x7a, 0x2e, 0x74, 0x76, 0x74, 0x69, 0x6d, 0x65, 0x2e, 0x52, 0x65,
-	0x67, 0x69, 0x73, 0x74, 0x65, 0x72, 0x55, 0x73, 0x65, 0x72, 0x52, 0x65, 0x73, 0x70, 0x6f, 0x6e,
-	0x73, 0x65, 0x22, 0x14, 0x82, 0xd3, 0xe4, 0x93, 0x02, 0x0e, 0x22, 0x09, 0x2f, 0x76, 0x31, 0x2f,
-	0x75, 0x73, 0x65, 0x72, 0x73, 0x3a, 0x01, 0x2a, 0x12, 0x9b, 0x01, 0x0a, 0x0d, 0x4c, 0x69, 0x73,
-	0x74, 0x46, 0x61, 0x76, 0x6f, 0x72, 0x69, 0x74, 0x65, 0x73, 0x12, 0x2b, 0x2e, 0x63, 0x6f, 0x6d,
-	0x2e, 0x61, 0x76, 0x69, 0x65, 0x62, 0x72, 0x61, 0x6e, 0x74, 0x7a, 0x2e, 0x74, 0x76, 0x74, 0x69,
-	0x6d, 0x65, 0x2e, 0x4c, 0x69, 0x73, 0x74, 0x46, 0x61, 0x76, 0x6f, 0x72, 0x69, 0x74, 0x65, 0x73,
-	0x52, 0x65, 0x71, 0x75, 0x65, 0x73, 0x74, 0x1a, 0x2c, 0x2e, 0x63, 0x6f, 0x6d, 0x2e, 0x61, 0x76,
-	0x69, 0x65, 0x62, 0x72, 0x61, 0x6e, 0x74, 0x7a, 0x2e, 0x74, 0x76, 0x74, 0x69, 0x6d, 0x65, 0x2e,
-	0x4c, 0x69, 0x73, 0x74, 0x46, 0x61, 0x76, 0x6f, 0x72, 0x69, 0x74, 0x65, 0x73, 0x52, 0x65, 0x73,
-	0x70, 0x6f, 0x6e, 0x73, 0x65, 0x22, 0x2f, 0x92, 0x41, 0x0e, 0x62, 0x0c, 0x0a, 0x0a, 0x0a, 0x06,
-	0x42, 0x65, 0x61, 0x72, 0x65, 0x72, 0x12, 0x00, 0x82, 0xd3, 0xe4, 0x93, 0x02, 0x18, 0x12, 0x16,
-	0x2f, 0x76, 0x31, 0x2f, 0x75, 0x73, 0x65, 0x72, 0x73, 0x2f, 0x6d, 0x65, 0x2f, 0x66, 0x61, 0x76,
-	0x6f, 0x72, 0x69, 0x74, 0x65, 0x73, 0x12, 0xbd, 0x01, 0x0a, 0x13, 0x41, 0x64, 0x64, 0x4d, 0x6f,
-	0x76, 0x69, 0x65, 0x54, 0x6f, 0x46, 0x61, 0x76, 0x6f, 0x72, 0x69, 0x74, 0x65, 0x73, 0x12, 0x34,
+	0x76, 0x6f, 0x72, 0x69, 0x74, 0x65, 0x52, 0x65, 0x71, 0x75, 0x65, 0x73, 0x74, 0x12, 0x12, 0x0a,
+	0x04, 0x73, 0x6c, 0x75, 0x67, 0x18, 0x01, 0x20, 0x01, 0x28, 0x09, 0x52, 0x04, 0x73, 0x6c, 0x75,
+	0x67, 0x22, 0x20, 0x0a, 0x1e, 0x41, 0x64, 0x64, 0x52, 0x65, 0x6d, 0x6f, 0x76, 0x65, 0x4d, 0x6f,
+	0x76, 0x69, 0x65, 0x46, 0x61, 0x76, 0x6f, 0x72, 0x69, 0x74, 0x65, 0x52, 0x65, 0x73, 0x70, 0x6f,
+	0x6e, 0x73, 0x65, 0x32, 0xa9, 0x05, 0x0a, 0x0b, 0x55, 0x73, 0x65, 0x72, 0x53, 0x65, 0x72, 0x76,
+	0x69, 0x63, 0x65, 0x12, 0x7d, 0x0a, 0x0c, 0x52, 0x65, 0x67, 0x69, 0x73, 0x74, 0x65, 0x72, 0x55,
+	0x73, 0x65, 0x72, 0x12, 0x2a, 0x2e, 0x63, 0x6f, 0x6d, 0x2e, 0x61, 0x76, 0x69, 0x65, 0x62, 0x72,
+	0x61, 0x6e, 0x74, 0x7a, 0x2e, 0x74, 0x76, 0x74, 0x69, 0x6d, 0x65, 0x2e, 0x52, 0x65, 0x67, 0x69,
+	0x73, 0x74, 0x65, 0x72, 0x55, 0x73, 0x65, 0x72, 0x52, 0x65, 0x71, 0x75, 0x65, 0x73, 0x74, 0x1a,
+	0x2b, 0x2e, 0x63, 0x6f, 0x6d, 0x2e, 0x61, 0x76, 0x69, 0x65, 0x62, 0x72, 0x61, 0x6e, 0x74, 0x7a,
+	0x2e, 0x74, 0x76, 0x74, 0x69, 0x6d, 0x65, 0x2e, 0x52, 0x65, 0x67, 0x69, 0x73, 0x74, 0x65, 0x72,
+	0x55, 0x73, 0x65, 0x72, 0x52, 0x65, 0x73, 0x70, 0x6f, 0x6e, 0x73, 0x65, 0x22, 0x14, 0x82, 0xd3,
+	0xe4, 0x93, 0x02, 0x0e, 0x22, 0x09, 0x2f, 0x76, 0x31, 0x2f, 0x75, 0x73, 0x65, 0x72, 0x73, 0x3a,
+	0x01, 0x2a, 0x12, 0x9b, 0x01, 0x0a, 0x0d, 0x4c, 0x69, 0x73, 0x74, 0x46, 0x61, 0x76, 0x6f, 0x72,
+	0x69, 0x74, 0x65, 0x73, 0x12, 0x2b, 0x2e, 0x63, 0x6f, 0x6d, 0x2e, 0x61, 0x76, 0x69, 0x65, 0x62,
+	0x72, 0x61, 0x6e, 0x74, 0x7a, 0x2e, 0x74, 0x76, 0x74, 0x69, 0x6d, 0x65, 0x2e, 0x4c, 0x69, 0x73,
+	0x74, 0x46, 0x61, 0x76, 0x6f, 0x72, 0x69, 0x74, 0x65, 0x73, 0x52, 0x65, 0x71, 0x75, 0x65, 0x73,
+	0x74, 0x1a, 0x2c, 0x2e, 0x63, 0x6f, 0x6d, 0x2e, 0x61, 0x76, 0x69, 0x65, 0x62, 0x72, 0x61, 0x6e,
+	0x74, 0x7a, 0x2e, 0x74, 0x76, 0x74, 0x69, 0x6d, 0x65, 0x2e, 0x4c, 0x69, 0x73, 0x74, 0x46, 0x61,
+	0x76, 0x6f, 0x72, 0x69, 0x74, 0x65, 0x73, 0x52, 0x65, 0x73, 0x70, 0x6f, 0x6e, 0x73, 0x65, 0x22,
+	0x2f, 0x92, 0x41, 0x0e, 0x62, 0x0c, 0x0a, 0x0a, 0x0a, 0x06, 0x42, 0x65, 0x61, 0x72, 0x65, 0x72,
+	0x12, 0x00, 0x82, 0xd3, 0xe4, 0x93, 0x02, 0x18, 0x12, 0x16, 0x2f, 0x76, 0x31, 0x2f, 0x75, 0x73,
+	0x65, 0x72, 0x73, 0x2f, 0x6d, 0x65, 0x2f, 0x66, 0x61, 0x76, 0x6f, 0x72, 0x69, 0x74, 0x65, 0x73,
+	0x12, 0xba, 0x01, 0x0a, 0x13, 0x41, 0x64, 0x64, 0x4d, 0x6f, 0x76, 0x69, 0x65, 0x54, 0x6f, 0x46,
+	0x61, 0x76, 0x6f, 0x72, 0x69, 0x74, 0x65, 0x73, 0x12, 0x34, 0x2e, 0x63, 0x6f, 0x6d, 0x2e, 0x61,
+	0x76, 0x69, 0x65, 0x62, 0x72, 0x61, 0x6e, 0x74, 0x7a, 0x2e, 0x74, 0x76, 0x74, 0x69, 0x6d, 0x65,
+	0x2e, 0x41, 0x64, 0x64, 0x52, 0x65, 0x6d, 0x6f, 0x76, 0x65, 0x4d, 0x6f, 0x76, 0x69, 0x65, 0x46,
+	0x61, 0x76, 0x6f, 0x72, 0x69, 0x74, 0x65, 0x52, 0x65, 0x71, 0x75, 0x65, 0x73, 0x74, 0x1a, 0x35,
 	0x2e, 0x63, 0x6f, 0x6d, 0x2e, 0x61, 0x76, 0x69, 0x65, 0x62, 0x72, 0x61, 0x6e, 0x74, 0x7a, 0x2e,
 	0x74, 0x76, 0x74, 0x69, 0x6d, 0x65, 0x2e, 0x41, 0x64, 0x64, 0x52, 0x65, 0x6d, 0x6f, 0x76, 0x65,
-	0x4d, 0x6f, 0x76, 0x69, 0x65, 0x46, 0x61, 0x76, 0x6f, 0x72, 0x69, 0x74, 0x65, 0x52, 0x65, 0x71,
-	0x75, 0x65, 0x73, 0x74, 0x1a, 0x35, 0x2e, 0x63, 0x6f, 0x6d, 0x2e, 0x61, 0x76, 0x69, 0x65, 0x62,
-	0x72, 0x61, 0x6e, 0x74, 0x7a, 0x2e, 0x74, 0x76, 0x74, 0x69, 0x6d, 0x65, 0x2e, 0x41, 0x64, 0x64,
-	0x52, 0x65, 0x6d, 0x6f, 0x76, 0x65, 0x4d, 0x6f, 0x76, 0x69, 0x65, 0x46, 0x61, 0x76, 0x6f, 0x72,
-	0x69, 0x74, 0x65, 0x52, 0x65, 0x73, 0x70, 0x6f, 0x6e, 0x73, 0x65, 0x22, 0x39, 0x92, 0x41, 0x0e,
-	0x62, 0x0c, 0x0a, 0x0a, 0x0a, 0x06, 0x42, 0x65, 0x61, 0x72, 0x65, 0x72, 0x12, 0x00, 0x82, 0xd3,
-	0xe4, 0x93, 0x02, 0x22, 0x1a, 0x20, 0x2f, 0x76, 0x31, 0x2f, 0x75, 0x73, 0x65, 0x72, 0x73, 0x2f,
-	0x6d, 0x65, 0x2f, 0x66, 0x61, 0x76, 0x6f, 0x72, 0x69, 0x74, 0x65, 0x73, 0x2f, 0x7b, 0x6d, 0x6f,
-	0x76, 0x69, 0x65, 0x49, 0x64, 0x7d, 0x12, 0xc2, 0x01, 0x0a, 0x18, 0x52, 0x65, 0x6d, 0x6f, 0x76,
-	0x65, 0x4d, 0x6f, 0x76, 0x69, 0x65, 0x46, 0x72, 0x6f, 0x6d, 0x46, 0x61, 0x76, 0x6f, 0x72, 0x69,
-	0x74, 0x65, 0x73, 0x12, 0x34, 0x2e, 0x63, 0x6f, 0x6d, 0x2e, 0x61, 0x76, 0x69, 0x65, 0x62, 0x72,
-	0x61, 0x6e, 0x74, 0x7a, 0x2e, 0x74, 0x76, 0x74, 0x69, 0x6d, 0x65, 0x2e, 0x41, 0x64, 0x64, 0x52,
-	0x65, 0x6d, 0x6f, 0x76, 0x65, 0x4d, 0x6f, 0x76, 0x69, 0x65, 0x46, 0x61, 0x76, 0x6f, 0x72, 0x69,
-	0x74, 0x65, 0x52, 0x65, 0x71, 0x75, 0x65, 0x73, 0x74, 0x1a, 0x35, 0x2e, 0x63, 0x6f, 0x6d, 0x2e,
-	0x61, 0x76, 0x69, 0x65, 0x62, 0x72, 0x61, 0x6e, 0x74, 0x7a, 0x2e, 0x74, 0x76, 0x74, 0x69, 0x6d,
-	0x65, 0x2e, 0x41, 0x64, 0x64, 0x52, 0x65, 0x6d, 0x6f, 0x76, 0x65, 0x4d, 0x6f, 0x76, 0x69, 0x65,
-	0x46, 0x61, 0x76, 0x6f, 0x72, 0x69, 0x74, 0x65, 0x52, 0x65, 0x73, 0x70, 0x6f, 0x6e, 0x73, 0x65,
-	0x22, 0x39, 0x92, 0x41, 0x0e, 0x62, 0x0c, 0x0a, 0x0a, 0x0a, 0x06, 0x42, 0x65, 0x61, 0x72, 0x65,
-	0x72, 0x12, 0x00, 0x82, 0xd3, 0xe4, 0x93, 0x02, 0x22, 0x2a, 0x20, 0x2f, 0x76, 0x31, 0x2f, 0x75,
-	0x73, 0x65, 0x72, 0x73, 0x2f, 0x6d, 0x65, 0x2f, 0x66, 0x61, 0x76, 0x6f, 0x72, 0x69, 0x74, 0x65,
-	0x73, 0x2f, 0x7b, 0x6d, 0x6f, 0x76, 0x69, 0x65, 0x49, 0x64, 0x7d, 0x42, 0x0a, 0x5a, 0x08, 0x2e,
-	0x3b, 0x74, 0x76, 0x74, 0x69, 0x6d, 0x65, 0x62, 0x06, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x33,
+	0x4d, 0x6f, 0x76, 0x69, 0x65, 0x46, 0x61, 0x76, 0x6f, 0x72, 0x69, 0x74, 0x65, 0x52, 0x65, 0x73,
+	0x70, 0x6f, 0x6e, 0x73, 0x65, 0x22, 0x36, 0x92, 0x41, 0x0e, 0x62, 0x0c, 0x0a, 0x0a, 0x0a, 0x06,
+	0x42, 0x65, 0x61, 0x72, 0x65, 0x72, 0x12, 0x00, 0x82, 0xd3, 0xe4, 0x93, 0x02, 0x1f, 0x1a, 0x1d,
+	0x2f, 0x76, 0x31, 0x2f, 0x75, 0x73, 0x65, 0x72, 0x73, 0x2f, 0x6d, 0x65, 0x2f, 0x66, 0x61, 0x76,
+	0x6f, 0x72, 0x69, 0x74, 0x65, 0x73, 0x2f, 0x7b, 0x73, 0x6c, 0x75, 0x67, 0x7d, 0x12, 0xbf, 0x01,
+	0x0a, 0x18, 0x52, 0x65, 0x6d, 0x6f, 0x76, 0x65, 0x4d, 0x6f, 0x76, 0x69, 0x65, 0x46, 0x72, 0x6f,
+	0x6d, 0x46, 0x61, 0x76, 0x6f, 0x72, 0x69, 0x74, 0x65, 0x73, 0x12, 0x34, 0x2e, 0x63, 0x6f, 0x6d,
+	0x2e, 0x61, 0x76, 0x69, 0x65, 0x62, 0x72, 0x61, 0x6e, 0x74, 0x7a, 0x2e, 0x74, 0x76, 0x74, 0x69,
+	0x6d, 0x65, 0x2e, 0x41, 0x64, 0x64, 0x52, 0x65, 0x6d, 0x6f, 0x76, 0x65, 0x4d, 0x6f, 0x76, 0x69,
+	0x65, 0x46, 0x61, 0x76, 0x6f, 0x72, 0x69, 0x74, 0x65, 0x52, 0x65, 0x71, 0x75, 0x65, 0x73, 0x74,
+	0x1a, 0x35, 0x2e, 0x63, 0x6f, 0x6d, 0x2e, 0x61, 0x76, 0x69, 0x65, 0x62, 0x72, 0x61, 0x6e, 0x74,
+	0x7a, 0x2e, 0x74, 0x76, 0x74, 0x69, 0x6d, 0x65, 0x2e, 0x41, 0x64, 0x64, 0x52, 0x65, 0x6d, 0x6f,
+	0x76, 0x65, 0x4d, 0x6f, 0x76, 0x69, 0x65, 0x46, 0x61, 0x76, 0x6f, 0x72, 0x69, 0x74, 0x65, 0x52,
+	0x65, 0x73, 0x70, 0x6f, 0x6e, 0x73, 0x65, 0x22, 0x36, 0x92, 0x41, 0x0e, 0x62, 0x0c, 0x0a, 0x0a,
+	0x0a, 0x06, 0x42, 0x65, 0x61, 0x72, 0x65, 0x72, 0x12, 0x00, 0x82, 0xd3, 0xe4, 0x93, 0x02, 0x1f,
+	0x2a, 0x1d, 0x2f, 0x76, 0x31, 0x2f, 0x75, 0x73, 0x65, 0x72, 0x73, 0x2f, 0x6d, 0x65, 0x2f, 0x66,
+	0x61, 0x76, 0x6f, 0x72, 0x69, 0x74, 0x65, 0x73, 0x2f, 0x7b, 0x73, 0x6c, 0x75, 0x67, 0x7d, 0x42,
+	0x1e, 0x5a, 0x1c, 0x63, 0x6f, 0x6d, 0x2e, 0x61, 0x76, 0x69, 0x65, 0x62, 0x72, 0x61, 0x6e, 0x74,
+	0x7a, 0x2e, 0x74, 0x76, 0x74, 0x69, 0x6d, 0x65, 0x2f, 0x74, 0x76, 0x74, 0x69, 0x6d, 0x65, 0x62,
+	0x06, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x33,
 }
 
 var (
